# MecchaCamouflage

./: .gitignore  AUDIT.md  Makefile  PLAN.md  README.md  REPORT.md  memo.txt  push-to-github.bat
.github/workflows/: ci.yml  release.yml
docs/: release-checklist.md  repository-layout.md  research-tools.md  runtime-bridge-map.md  runtime-direct-bridge.md  runtime-maintenance.md  runtime-paint-replication-research.md  runtime-paint-replication-validation.md
native/src/: meccha_runtime_controller.cpp
p/: .gitignore  README.md  pyproject.toml  requirements.txt
p/native/: README.md
p/native/sdk/: meccha_sdk_min.hpp
p/native/src/: meccha_xenos_bridge.cpp  meccha_xenos_injector.cpp
p/scripts/: build_exe.ps1  build_native.ps1  deploy_replace_when_unlocked.ps1  deploy_to_game.ps1  dev_flow.ps1  dev_flow.sh  package_release.ps1
p/src/: __init__.py  __main__.py  cli.py  diagnostics.py  native_bridge.py  plan_io.py  process.py  protocol.py
p/src/adapters/: __init__.py  base.py  noop.py  ue4ss_stub.py  xenos_stub.py
p/src/core/: __init__.py  algorithms.py  models.py
p/tests/: test_runtime.py
runtime/include/: sdk.hpp
runtime/src/: bridge.cpp  controller.cpp  controller_events.cpp  controller_hotkeys.cpp  controller_hotkeys.hpp  controller_settings.cpp  controller_settings.hpp  controller_ui.cpp  controller_ui.hpp  meccha_runtime_controller.cpp  meccha_xenos_bridge.cpp
scripts/: build.ps1  build_native.ps1  deploy_to_game.ps1  dev.ps1  dev_flow.ps1  package_release.ps1  release.ps1  start.ps1  test_runtime_route.ps1
scripts/research/: README.md  (+4 more)
(+85 files in other folders)
