[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meccha-camouflage-runtime"
version = "0.1.0"
description = "Python runtime for MecchaCamouflage painting workflow."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
meccha-camouflage = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
